--- a/JDWeb/WebRoot/userRegister.html
+++ b/JDWeb/WebRoot/userRegister.html
@@ -8,7 +8,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     
     <link rel="stylesheet" type="text/css" href="./css/userRegister.css">
-    <link href="./plug/dragCheck/css/drag.css" rel="stylesheet" type="text/css">
+    <link href="./plugs/dragCheck/css/drag.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript">
 		var isChecked = 0;		//  是否认证
@@ -369,7 +369,7 @@
 			location.replace("http://localhost:8080/JDWeb/userRegister.html");
 		}
 	</script>
-	<script src="./plug/dragCheck/js/drag.js" type="text/javascript"></script>
+	<script src="./plugs/dragCheck/js/drag.js" type="text/javascript"></script>
   </head>
   
   <body>
