--- a/JDWeb/WebRoot/userRegister.html
+++ b/JDWeb/WebRoot/userRegister.html
@@ -10,382 +10,8 @@
     <link rel="stylesheet" type="text/css" href="./css/userRegister.css">
     <link href="./plugs/dragCheck/css/drag.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript">
-		var isChecked = 0;		//  是否认证
-		var isLegal = 0;		//  是否合法
-		var isUsernameLegal = 0;  //  用户名是否通过
-		var isPsdLegal = 0; 	  //  登录密码是否通过
-		var isCheckPsdLegal = 0; 	  //  确认密码是否通过
-		var isCheckCodeLegal = 0;     //  验证码是否正确
-		var successRegister = 0;	  //  是否注册成功
-		var phoneIsExist = "你的手机号码已经注册";
-		var phoneErrorIllegal = "手机号码格式不正确，请重新输入";
-		var phoneIsNull = "请输入你的手机号码";
-		var usernameIsNull = "请输入会员名";
-		var usernameIsExist = "该会员名已存在";
-		var usernameIllegal = "该会员名不合法，请重新输入";
-		var usernameIsNotLong = "会员名不够长";
-		var psdIsNull = "请输入登录密码";
-		var psdIllegal = "密码格式不正确，请重新输入";
-		var psdIsNotLong = "密码必须为6-16位之间";
-		var checkPsdIsNull = "请确认密码";
-		var checkPsdIsError = "两次密码输入不一致，请检查";
-		var checkCodeIsNull = "请输入验证码";
-		var checkCodeIsError = "验证码错误，请重新输入";
-		var successRegisterText = "注册成功！立即去商城逛逛吧。";
-		var failedRegisterText = "非常抱歉，注册失败！请稍后重试。";
-		//  验证手机
-		var Expression = /^1[34578]\d{9}$/;
-		var TelExp = new RegExp(Expression);
-		//  验证会员名
-		var ExpressionName = /^[a-zA-Z]{1}([a-zA-Z0-9]|[._]){4,19}$/; 
-		var userNameExp = new RegExp(ExpressionName);
-		// 验证密码
-		//弱  
-	    var Expressionweek = /^([a-zA-Z]){6,16}$|^(\d){6,16}$|^((?=[\x21-\x7e]+)[^A-Za-z0-9]){6,16}$|^(?!\2+$)(?!\1+$)[\2\1]{6,7}$|^(?!\3+$)(?!\1+$)[\3\1]{6,7}$|^(?!\3+$)(?!\2+$)[\2\3]{6,7}$|^(?=.*\3)(?=.*\1)(?=.*\2)[a-zA-Z\x21-\x7e\d]{6,7}$/;  
-	    //中：字母+数字  
-	    var Expressionmiddle1 = /^(?!\d+$)(?![a-zA-Z]+$)[\dA-Za-z]{8,16}$/;  
-	    //中：字母+字符  
-	    var Expressionmiddle2 = /^(?!((?=[\x21-\x7e]+)[^A-Za-z0-9])+$)(?![a-zA-Z]+$)[^\u4e00-\u9fa5\d]{8,16}$/;  
-	    //中：数字+字符  
-	    var Expressionmiddle3 = /^(?!((?=[\x21-\x7e]+)[^A-Za-z0-9])+$)(?!\d+$)[^\u4e00-\u9fa5a-zA-Z]{8,16}$/;  
-	    //强  
-	    var Expressionstrong = /^(?=.*((?=[\x21-\x7e]+)[^A-Za-z0-9]))(?=.*[a-zA-Z])(?=.*[0-9])[^\u4e00-\u9fa5]{8,16}$/;
-	    var psdWeek = new RegExp(Expressionweek);
-	    var psdMid1 = new RegExp(Expressionmiddle1);
-	    var psdMid2 = new RegExp(Expressionmiddle2);
-	    var psdMid3 = new RegExp(Expressionmiddle3);
-	    var psdStrong = new RegExp(Expressionstrong);
-		function btnselect(obj)
-		{
-			if( isChecked == 1 )
-				obj.style.backgroundColor = "#EE5F00";
-		}
-		function btnNotselect(obj)
-		{
-			if( isChecked == 1 )
-				obj.style.backgroundColor = "#FF7011";
-		}
-		function step23BtnSelect(obj)
-		{
-			obj.style.backgroundColor = "#EE5F00";
-		}
-		function step23BtnNotselect(obj)
-		{
-			obj.style.backgroundColor = "#FF7011";
-		}
-		//  校验手机号
-		function checkPhone(obj)
-		{
-			if( obj.value == "" )	//  为空
-			{
-				(function($){
-				$('#phoneTip_ok').css({'display':'none'});
-				$('#phoneTip').css({'display':'block'});
-				$('#phoneTip_Text').text(phoneIsNull);
-				$('#phonenum').css({'borderColor':'#FF3300'});
-				})(jQuery);
-			}
-			else if( TelExp.test( obj.value ) == false )	//  不合法
-			{
-				(function($){
-				$('#phoneTip_ok').css({'display':'none'});
-				$('#phoneTip').css({'display':'block'});
-				$('#phoneTip_Text').text(phoneErrorIllegal);
-				$('#phonenum').css({'borderColor':'#FF3300'});
-				})(jQuery);
-			}
-			else
-			{
-				(function($){
-				var val = $('#phonenum').val();
-				//  异步检查手机号码是否注册
-				$.ajax({  
-	               type:"get",//请求方式  
-	               url:"GetAjaxInfoServlet?phone="+val,//发送请求地址  
-	               timeout:30000,//超时时间：30秒  
-	               dataType:"text",//设置返回数据的格式  
-	               //请求成功后的回调函数 data为text格式  
-	               success:function(data){
-	               	  if( data == "1" )
-	               	  {
-	               	  	$('#phoneTip_error').css({'display':'none'});
-						$('#phoneTip_ok').css({'display':'block'});
-						$('#phoneTip').css({'display':'block'});
-						$('#phoneTip_Text').text('');
-						isLegal = 1;
-	               	  }
-	              },
-	              //请求出错的处理  
-	              error:function(){  
-	                  alert("服务器出错，请重试！");
-	              }
-	            });	
-				})(jQuery);
-			}
-		}
-		function changBorder(obj)
-		{
-			(function($){
-			$('#phonenum').css({'border':''});
-			})(jQuery);
-		}
-		function goNext()
-		{
-			//  手机填入成功，进入下一步
-			(function($){
-			$('#step1_title').css({'borderBottomColor':'#D5D5D5'});
-			$('#step2_title').css({'borderBottomColor':'#FF4111'});
-			$('#step1_text').css({'color':'#adb0b3'});
-			$('#step2_text').css({'color':'black'});
-			$('#one').css({'backgroundColor':'#adb0b3'});
-			$('#two').css({'backgroundColor':'#FF4111'});
-			// 隐藏第一步
-			$('#step1_input').css({'display':'none'});
-			// 显示第二步
-			$('#step2_input').css({'display':'block'});
-			})(jQuery);
-		}
-		//  刷新验证码
-		function reloadcode()
-		{
-			(function($){
-			$('#checkCode_pic').attr("src","./jsp/makeCheckCodeImg.jsp?"+Math.random()); 
-			})(jQuery);
-		}
-		//  校验用户名
-		function checkUsername(obj)
-		{
-			//  初始化
-			(function($){
-			$('#usernameTip_error').css({'display':'none'});
-			$('#usernameTip_ok').css({'display':'none'});
-			$('#usernameTip_text').text('');
-			})(jQuery);
-			isUsernameLegal = 0;
-			//  用户名为空
-			if( obj.value == "" )
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#usernameTip_error').css({'display':'block'});
-				$('#usernameTip_text').text(usernameIsNull);
-				})(jQuery);
-			}
-			else if( obj.value.length < 5 )	//  用户名不够长
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#usernameTip_error').css({'display':'block'});
-				$('#usernameTip_text').text(usernameIsNotLong);
-				})(jQuery);
-			}
-			else if( !userNameExp.test(obj.value) )	// 用户名不合法
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#usernameTip_error').css({'display':'block'});
-				$('#usernameTip_text').text(usernameIllegal);
-				})(jQuery);
-			}
-			else
-			{
-				// 查询用户名是否已经存在
-				
-				// 用户名通过
-				obj.style.borderColor = "gray";
-				$('#usernameTip_text').text('');
-				$('#usernameTip_error').css({'display':'none'});
-				$('#usernameTip_ok').css({'display':'block'});
-				isUsernameLegal = 1;
-			}
-		}
-		//  判断密码是否合法
-		function tojudgePsd(string)
-		{
-			if( psdWeek.test(string) || psdMid1.test(string) || psdMid2.test(string) || psdMid3.test(string) || psdStrong.test(string) )
-			{
-				return true;
-			}
-			return false;
-		}
-		//  校验密码
-		function tocheckPsd(obj)
-		{
-			//  初始化
-			(function($){
-			$('#psdTip_error').css({'display':'none'});
-			$('#psdTip_ok').css({'display':'none'});
-			$('#psdTip_text').text('');
-			})(jQuery);
-			isPsdLegal = 0;
-			//  密码为空
-			if( obj.value == "" )
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#psdTip_error').css({'display':'block'});
-				$('#psdTip_text').text(psdIsNull);
-				})(jQuery);
-			}
-			else if( obj.value.length < 6 )	//  密码不够长
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#psdTip_error').css({'display':'block'});
-				$('#psdTip_text').text(psdIsNotLong);
-				})(jQuery);
-			}
-			else if( !tojudgePsd(obj.value) )	// 密码不合法
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#psdTip_error').css({'display':'block'});
-				$('#psdTip_text').text(psdIllegal);
-				})(jQuery);
-			}
-			else
-			{
-				// 密码通过
-				obj.style.borderColor = "gray";
-				$('#psdTip_text').text('');
-				$('#psdTip_error').css({'display':'none'});
-				$('#psdTip_ok').css({'display':'block'});
-				isPsdLegal = 1;
-			}
-		}
-		// 判断密码等级
-		function tojudgeLevel(obj)
-		{
-			//  初始化
-			$('#low').css({'backgroundColor':'#FFCCAA'});
-			$('#mid').css({'backgroundColor':'#FFCCAA'});
-			$('#high').css({'backgroundColor':'#FFCCAA'});
-			if( psdWeek.test(obj.value) )  //  弱
-			{
-				$('#low').css({'backgroundColor':'#FF6600'});
-			}
-			//中
-			else if( psdMid1.test(obj.value) || psdMid2.test(obj.value) || psdMid3.test(obj.value) )
-			{
-				$('#low').css({'backgroundColor':'#FF6600'});
-				$('#mid').css({'backgroundColor':'#FF6600'});
-			}
-			//强
-			else if( psdStrong.test(obj.value) )
-			{
-				$('#low').css({'backgroundColor':'#FF6600'});
-				$('#mid').css({'backgroundColor':'#FF6600'});
-				$('#high').css({'backgroundColor':'#FF6600'});
-			}
-		}
-		// 判断两次输入的密码是否一致
-		function tocheckPsdSame(obj)
-		{
-			//  初始化
-			(function($){
-			$('#checkPsdTip_error').css({'display':'none'});
-			$('#checkPsdTip_ok').css({'display':'none'});
-			$('#checkPsdTip_text').text('');
-			})(jQuery);
-			var psd = document.getElementById("psd");
-			isCheckPsdLegal = 0;
-			if( obj.value == "" )	// 为空
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#checkPsdTip_error').css({'display':'block'});
-				$('#checkPsdTip_text').text(checkPsdIsNull);
-				})(jQuery);
-			}
-			else if( obj.value != psd.value ) // 两次输入不一致
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#checkPsdTip_error').css({'display':'block'});
-				$('#checkPsdTip_text').text(checkPsdIsError);
-				})(jQuery);
-			}
-			else
-			{
-				// 两次输入一致
-				obj.style.borderColor = "gray";
-				$('#checkPsdTip_text').text('');
-				$('#checkPsdTip_error').css({'display':'none'});
-				$('#checkPsdTip_ok').css({'display':'block'});
-				isCheckPsdLegal = 1;
-			}
-		}
-		// 校验验证码
-		function tocheckCode(obj)
-		{
-			//  初始化
-			(function($){
-			$('#checkCode_error').css({'display':'none'});
-			$('#checkCode_ok').css({'display':'none'});
-			$('#checkCodeTip_text').text('');
-			})(jQuery);
-			isCheckCodeLegal = 0;
-			if( obj.value == "" ) //  验证码为空
-			{
-				obj.style.borderColor = "#FF3300";
-				(function($){
-				$('#checkCode_error').css({'display':'block'});
-				$('#checkCodeTip_text').text(checkCodeIsNull);
-				})(jQuery);
-			}
-			else if( false )
-			{
-				
-			}
-			else
-			{
-				// 验证码正确
-				obj.style.borderColor = "gray";
-				$('#checkCodeTip_text').text('');
-				$('#checkCode_error').css({'display':'none'});
-				$('#checkCode_ok').css({'display':'block'});
-				isCheckCodeLegal = 1;
-			}
-			
-		}
-		//  确定注册
-		function toRegister()
-		{
-			//  信息填入成功，进入下一步
-			(function($){
-			$('#step2_title').css({'borderBottomColor':'#D5D5D5'});
-			$('#step3_title').css({'borderBottomColor':'#FF4111'});
-			$('#step2_text').css({'color':'#adb0b3'});
-			$('#step3_text').css({'color':'black'});
-			$('#two').css({'backgroundColor':'#adb0b3'});
-			$('#three').attr({'src':'./pics/check_alt(1).png'});
-			// 隐藏第二步
-			$('#step2_input').css({'display':'none'});
-			// 显示第三步
-			$('#step3_input').css({'display':'block'});
-			//  如果注册失败
-			if( successRegister == 0 )
-			{
-				//  显示按键、图片及提示
-				$('#Register_failed').css({'display':'block'});
-				$('#step3_refreshBtn').css({'display':'block'});
-				$('#result_text').text(failedRegisterText);
-			}
-			else	//  注册成功
-			{
-				$('#Register_suc').css({'display':'block'});
-				$('#step3_goToBtn').css({'display':'block'});
-				$('#result_text').text(successRegisterText);
-			}
-			})(jQuery);
-		}
-		//  重新注册,刷新本页
-		function reRegister()
-		{
-			location.replace("http://localhost:8080/JDWeb/userRegister.html");
-		}
-	</script>
+	<script type="text/javascript" src="./js/jquery.md5.js"></script>
+	<script type="text/javascript" src="./js/userRegister.js"></script>
 	<script src="./plugs/dragCheck/js/drag.js" type="text/javascript"></script>
   </head>
   
@@ -396,7 +22,6 @@
     </div>
     <div id="content">
     	<div id="user_win">
-    		<form id="userInfo" method="post" action="">
     		<div id="step1_input">
     			<div id="step1_firstdiv">
     				<label>手机号</label>
@@ -472,10 +97,9 @@
     				<img id="Register_failed" class="step3_pic" alt="注册失败" src="./pics/sign-error-icon.png">
     				<label id="result_text"></label>
     			</div>
-    			<div id="step3_goToBtn" class="step3_btn" onclick="" onmouseover="step23BtnSelect(this)" onmouseout="step23BtnNotselect(this)">立即去逛逛</div>
+    			<div id="step3_goToBtn" class="step3_btn" onclick="toMainPage()" onmouseover="step23BtnSelect(this)" onmouseout="step23BtnNotselect(this)">立即去逛逛</div>
     			<div id="step3_refreshBtn" class="step3_btn" onclick="reRegister()" onmouseover="step23BtnSelect(this)" onmouseout="step23BtnNotselect(this)">重新注册</div>
     		</div>
-    		</form>
     	</div>
     	<div id="step1_title">
     		<div id="one"><label>1</label></div>
