--- a/JDWeb/WebRoot/userRegister.html
+++ b/JDWeb/WebRoot/userRegister.html
@@ -17,7 +17,7 @@
   
   <body>
     <div id="head">
-    	<img alt="淘宝主页" id="headpic" src="./pics/G`I4EGLGZJHSOIBN7}Q9`RY.png">
+    	<img alt="淘宝主页" id="headpic" onclick="toMainPage()" src="./pics/G`I4EGLGZJHSOIBN7}Q9`RY.png">
     	<label id="title">用户注册</label>
     </div>
     <div id="content">
