--- a/JDWeb/WebRoot/userLogin.html
+++ b/JDWeb/WebRoot/userLogin.html
@@ -34,8 +34,8 @@
     			<input type="password" id="psd" name="psd" maxlength="16" onfocus="changeBorder(this)" onblur="changback(this)"/>
     		</div>
  			<div id="loginBtn" onclick="clickLogin()" onmouseover="changebtn(this)" onmouseout="changebackbtn(this)">登&nbsp;录</div>
-    		<a href="" id="forget">忘记密码</a>
-    		<a href="" id="toRegister">免费注册</a>
+    		<a href="./alterPassword.html" id="forget">忘记密码</a>
+    		<a href="./userRegister.html" id="toRegister">免费注册</a>
     	</div>
     </div>
     <div id="foot">
