--- a/JDWeb/WebRoot/mainPage.html
+++ b/JDWeb/WebRoot/mainPage.html
@@ -427,7 +427,7 @@
 		top:322px;
 		left:8%;
 		width:87%;
-		height:700px;
+		height:705px;
 		background-color:white;
 		border:#ff6905 solid 2px;
 	}
@@ -602,7 +602,7 @@
   			<label>全网热卖</label>
   		</div>
   		<div id="goodsBox">
-  			<iframe id="goodsData" src="./jsp/hotSellingGoods.jsp"></iframe>
+  			<iframe id="goodsData" src="./servlet/mainGetHotSellingGoods"></iframe>
   		</div>
   	</div>
   	<div id="foot">
