--- a/JDWeb/WebRoot/userRegister.html
+++ b/JDWeb/WebRoot/userRegister.html
@@ -26,7 +26,7 @@
     			<div id="step1_firstdiv">
     				<label>手机号</label>
     				<select>
-    					<option>中国大陆&nbsp&nbsp&nbsp&nbsp+86</option>
+    					<option>中国大陆&nbsp;&nbsp;&nbsp;&nbsp;+86</option>
     				</select>
     				<input id="phonenum" name="phonenum" type="text" placeholder="请输入你的手机号码" onfocus="changBorder(this)" onblur="checkPhone(this)" maxlength="11"/>
     				<div id="phoneTip">
